--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0">
+    <title>ChuYvWithYouForever</title>
+    <link href="./css/styles.css" rel="stylesheet" type="text/css">
   </head>
+  <body>
+    <header class="header">
+      <ul class="header__meta">
+      </ul>
+      <div class="container">
+        <div class="header__introduction">
+          <h1>初雨de时间轴日记</h1>
+          <p>时光匆匆，与你不散，我一直都在</p>
+          <div class="buttons">
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
       <canvas class="header__background"></canvas>
     </header>
-
     <script src="dist/particles.min.js"></script>
     <script>
       window.onload = function() {
@@ -29,3 +48,73 @@
     </script>
   </body>
 </html>
+
+
+<link rel="stylesheet" href="style.css" />
+
+<!--
+  时间轴日历--格式
+    </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-movie">此处：cd-movie为红色，cd-picture为绿色
+    </div>
+    <div class="cd-timeline-content">
+      <h2></h2>此处为标题
+      <p></p>此处为内容
+      <span class="cd-date"></span>此处为时间
+    </div>
+  </div>
+-->
+
+<!--LET'S START NOW!!!-->
+
+<section id="cd-timeline" class="cd-container">
+
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>奇怪了</h2>
+      <p>啊，怎么办怎么办怎么办，我可是个有底线的人，为什么我会下意识看向你的位置！？</p>
+      <span class="cd-date">2020-09-03</span>
+    </div>
+  </div>
+
+
+
+  </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-movie">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>越来越奇怪了</h2>
+      <p>诶诶！？为什么她也在看我？为什么我又要和她对视？？？？？？</p>
+      <span class="cd-date">2020 - 09~10</span>
+    </div>
+  </div>
+
+
+    </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>这能忍？</h2>
+      <p>直接主动找她聊天冲冲冲</p>
+      <span class="cd-date">2020-09-15-九年级第一次月考前</span>
+    </div>
+  </div>
+
+
+    </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-movie">
+    </div>
+    <div class="cd-timeline-content">
+      <h2></h2>
+      <p></p>
+      <span class="cd-date"></span>
+    </div>
+  </div>
+
+</section>
