--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="cd-timeline-content">
       <h2>奇怪了</h2>
       <p>啊，怎么办怎么办怎么办，我可是个有底线的人，为什么我会下意识看向你的位置！？</p>
-      <span class="cd-date">2020-09-03</span>
+      <span class="cd-date">2020-09-03-好平淡好平淡的一天</span>
     </div>
   </div>
 
@@ -89,7 +89,7 @@
     <div class="cd-timeline-content">
       <h2>越来越奇怪了</h2>
       <p>诶诶！？为什么她也在看我？为什么我又要和她对视？？？？？？</p>
-      <span class="cd-date">2020 - 09~10</span>
+      <span class="cd-date">2020 - 09~10 -持续了一个月，真怪了</span>
     </div>
   </div>
 
@@ -108,12 +108,67 @@
 
     </div>
   <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>惊了！</h2>
+      <p>她主动和我表白了QwQ好激动怎么形容捏！！</p>
+      <span class="cd-date">2020-10-10-一个美好的周六</span>
+    </div>
+  </div>
+
+    </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>不会是假的吧！！？？</h2>
+      <p>“你睡糊涂了嘛？？”“才没有... ...你管我？”</p>
+      <span class="cd-date">2020-10-11-全天懵逼的周日</span>
+    </div>
+  </div>
+
+    </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>心情真好</h2>
+      <p>和她关系越来越好了呢！</p>
+      <span class="cd-date">2020-10-11~10-24-你是第一个出现在我生命中的女孩</span>
+    </div>
+  </div>
+
+    </div>
+  <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-movie">
     </div>
     <div class="cd-timeline-content">
-      <h2></h2>
-      <p></p>
-      <span class="cd-date"></span>
+      <h2>有点危险</h2>
+      <p>持续了10天的冷淡期</p>
+      <span class="cd-date">2020-10-25~11-03-好伤心，她不理我</span>
+    </div>
+  </div>
+
+    </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-movie">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>生气了！</h2>
+      <p>把你屏蔽了，抱歉</p>
+      <span class="cd-date">2020-11-03-这一天真的一夜没睡</span>
+    </div>
+  </div>
+
+    </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>和好了！</h2>
+      <p>你终于憋不住主动找我啦！和你看电影互相喂零食的感觉真好呢</p>
+      <span class="cd-date">2020-11-04</span>
     </div>
   </div>
 
