--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div class="cd-timeline-content">
       <h2>和好了！</h2>
       <p>你终于憋不住主动找我啦！和你看电影互相喂零食的感觉真好呢</p>
-      <span class="cd-date">2020-11-04</span>
+      <span class="cd-date">2020-11-04-心情慢慢好起来</span>
     </div>
   </div>
 
