--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <div class="header__introduction">
           <h1>初雨de时间轴日记</h1>
-          <p>时光匆匆，与你不散，我一直都在</p>
+          <p>-时光匆匆，与你不散，我一直都在-</p>
           <div class="buttons">
               </div>
             </a>
@@ -173,3 +173,5 @@
   </div>
 
 </section>
+<body>
+<h2 class="top_title">好害怕我会错过你<br/>
