--- a/index.html
+++ b/index.html
@@ -71,12 +71,9 @@
 <section id="cd-timeline" class="cd-container">
   
 
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>你是我患得患失的梦</title>
-<link rel="stylesheet" href="style.css" />
+<body>
+<h2 class="top_title">你是我患得患失的梦<br/><h2>
+  <link rel="stylesheet" href="style.css" />
 <style type="text/css">
 h2.top_title{border-bottom:none;background:none;text-align:center;line-height:32px; font-size:20px}
 h2.top_title span{font-size:12px; color:#666;font-weight:500}
