--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!--居中标题-->
+
 <html>
   <head>
     <meta charset="utf-8" />
@@ -22,6 +25,9 @@
       </div>
       <canvas class="header__background"></canvas>
     </header>
+
+<!--背景特效（particles.js）-->
+
     <script src="dist/particles.min.js"></script>
     <script>
       window.onload = function() {
@@ -49,6 +55,7 @@
   </body>
 </html>
 
+<!--时间轴-->
 
 <link rel="stylesheet" href="style.css" />
 
@@ -84,7 +91,7 @@
 
   </div>
   <div class="cd-timeline-block">
-    <div class="cd-timeline-img cd-movie">
+    <div class="cd-timeline-img cd-picture">
     </div>
     <div class="cd-timeline-content">
       <h2>越来越奇怪了</h2>
@@ -141,6 +148,17 @@
 
     </div>
   <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>我馋你下半“生”</h2>
+      <p>“晚安，宝贝”</p>
+      <span class="cd-date">2020-10-25-第一次被称呼得这么亲昵</span>
+    </div>
+  </div>
+
+    </div>
+  <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-movie">
     </div>
     <div class="cd-timeline-content">
@@ -176,7 +194,7 @@
 
 <!--页脚-->
 <body>
-<h2 class="top_title">你是我患得患失的梦<br/><h2>
+<h2 class="top_title">-你是我患得患失的梦-<br/><h2>
   <link rel="stylesheet" href="style.css" />
 <style type="text/css">
 h2.top_title{border-bottom:none;background:none;text-align:center;line-height:32px; font-size:20px}
