--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div>
     <div class="cd-timeline-content">
       <h2>“挠头”</h2>
-      <p>你好像在躲闪我，是不是我多虑了？</p>
+      <p>你好像在躲闪我，是不是我多虑了？“你能不能不要这样发说说啊？不然我把你屏蔽了！”，，她应该不是讨厌我吧，可能是想让我保守一点！？（企图安慰自己）</p>
       <span class="cd-date">2020-11-09-emmmm...</span>
     </div>
   </div>
