--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
     </div>
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
+      <img src="img/love.svg" alt="Location">
     </div>
     <div class="cd-timeline-content">
       <h2>我馋你下半“生”</h2>
@@ -182,6 +183,7 @@
     </div>
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
+      <img src="img/love.svg" alt="Location">
     </div>
     <div class="cd-timeline-content">
       <h2>和好了！</h2>
