--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="header__introduction">
           <h1>初雨de时间轴日记</h1>
-          <p>-时光匆匆，与你不散，我一直都在-</p>
+          <p>-我恨你——2020，你带走了我的一切-</p>
           <div class="buttons">
               </div>
             </a>
