--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
     </div>
     <div class="cd-timeline-content">
       <h2>我死了！</h2>
-      <p>要被你可爱死了！好喜欢捏你的脸o！</p>
-      <span class="cd-date">2020-11-08-我只碰你的脸</span>
+      <p>要被你可爱死了！</p>
+      <span class="cd-date">2020-11-08-QAQ</span>
     </div>
   </div>
 
@@ -253,7 +253,7 @@
     </div>
     <div class="cd-timeline-content">
       <h2>开始还是结束？</h2>
-      <p>“我删你了啊”“无所谓”？？？？？？？？？XD原来你一点都不在乎</p>
+      <p>“我删你了啊”“我没意见”？？？？？？？？？XD原来你一点都不在乎</p>
       <span class="cd-date">2020-11-18-你走了我怎么办</span>
     </div>
   </div>
