--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="header__introduction">
           <h1>初雨de时间轴日记</h1>
-          <p>-我恨你——2020，你带走了我的一切-</p>
+          <p>-陪你去更远的地方-</p>
           <div class="buttons">
               </div>
             </a>
@@ -160,7 +160,7 @@
     </div>
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
-      <img src="img/love.svg" alt="Location">
+      <!--img src="img/love.svg" alt="Location"-->
     </div>
     <div class="cd-timeline-content">
       <h2>我馋你下半“生”</h2>
@@ -194,7 +194,7 @@
     </div>
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
-      <img src="img/love.svg" alt="Location">
+      <!--img src="img/love.svg" alt="Location"-->
     </div>
     <div class="cd-timeline-content">
       <h2>和好了！</h2>
@@ -258,11 +258,22 @@
     </div>
   </div>
 
+    </div>
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+    </div>
+    <div class="cd-timeline-content">
+      <h2>冷战 IS END</h2>
+      <p>陪你去更远的地方</p>
+      <span class="cd-date">2020-11-23-QwQ</span>
+    </div>
+  </div>
+
 </section>
 
 <!--页脚-->
 <body>
-<h2 class="top_title">-你不再是我患得患失的梦-<br/><h2>
+<h2 class="top_title">-你是我患得患失的梦-<br/><h2>
   <link rel="stylesheet" href="style.css" />
 <style type="text/css">
 h2.top_title{border-bottom:none;background:none;text-align:center;line-height:32px; font-size:20px}
