--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     </div>
   <div class="cd-timeline-block">
-    <div class="cd-timeline-img cd-picture">
+    <div class="cd-timeline-img cd-movie">
     </div>
     <div class="cd-timeline-content">
       <h2>开始还是结束？</h2>
