--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
     <div class="cd-timeline-img cd-picture">
     </div>
     <div class="cd-timeline-content">
-      <h2>冷战 IS END</h2>
-      <p>陪你去更远的地方</p>
+      <h2>第一次世界大战</h2>
+      <p>心情复杂</p>
       <span class="cd-date">2020-11-23-QwQ</span>
     </div>
   </div>
