--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </ul>
       <div class="container">
         <div class="header__introduction">
-          <h1>初雨de时间轴日记</h1>
-          <p>-陪你去更远的地方-</p>
+          <h1>一切都已经画上句点</h1>
+          <p>- By XY1801 初雨 -</p>
           <div class="buttons">
               </div>
             </a>
@@ -74,7 +74,7 @@
 -->
 
 <!--LET'S START NOW!!!-->
-
+<!--
 <section id="cd-timeline" class="cd-container">
   
   <div class="cd-timeline-block">
@@ -160,7 +160,7 @@
     </div>
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
-      <!--img src="img/love.svg" alt="Location"-->
+
     </div>
     <div class="cd-timeline-content">
       <h2>我馋你下半“生”</h2>
@@ -194,7 +194,7 @@
     </div>
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
-      <!--img src="img/love.svg" alt="Location"-->
+
     </div>
     <div class="cd-timeline-content">
       <h2>和好了！</h2>
@@ -279,12 +279,12 @@
       <span class="cd-date">2020-12-25-Merry Christmas</span>
     </div>
   </div>
-
+-->
 </section>
 
 <!--页脚-->
 <body>
-<h2 class="top_title">-你是我患得患失的梦-<br/><h2>
+<h2 class="top_title">-In the end-<br/><h2>
   <link rel="stylesheet" href="style.css" />
 <style type="text/css">
 h2.top_title{border-bottom:none;background:none;text-align:center;line-height:32px; font-size:20px}
